syntax = "proto3";

package grpc_tools.test.simple;

import "grpc_tools/test/simpler.proto";

message SimpleMessage {
  string msg = 1;
  oneof personal_or_business {
    bool personal = 2;
    bool business = 3;
  };
  grpc_tools.test.simpler.SimplerMessage simpler_message = 4;
};

message SimpleMessageRequest {
  SimpleMessage simple_msg = 1;
};

message SimpleMessageResponse {
  bool understood = 1;
};

service SimpleMessageService {
  rpc Tell(SimpleMessageRequest) returns (SimpleMessageResponse);
};
